tests/computed_race/computed_race.exp
Error -------------------------------------------------------------------------------------------------------- b.js:11:1

Cannot cast `o[A.FOO]` to empty because null [1] is incompatible with empty [2]. [incompatible-type]

   b.js:11:1
   11| o[A.FOO] as empty; // error: null ~> empty
       ^^^^^^^^

References:
   b.js:10:15
   10| var o = {[k]: null};
                     ^^^^ [1]
   b.js:11:13
   11| o[A.FOO] as empty; // error: null ~> empty
                   ^^^^^ [2]


Error -------------------------------------------------------------------------------------------------------- c.js:11:1

Cannot cast `o[k]` to empty because null [1] is incompatible with empty [2]. [incompatible-type]

   c.js:11:1
   11| o[k] as empty; // error: null ~> empty
       ^^^^

References:
   c.js:9:19
    9| var o = {[A.FOO]: null};
                         ^^^^ [1]
   c.js:11:9
   11| o[k] as empty; // error: null ~> empty
               ^^^^^ [2]



Found 2 errors
